@@ -52,10 +52,6 @@
 
 package io.anserini.collection;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.apache.tools.ant.filters.StringInputStream;
-
 import java.io.DataInput;
 import java.io.DataInputStream;
 import java.io.DataOutput;
@@ -64,35 +60,28 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
-import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Iterator;
-import java.util.List;
 import java.util.Map;
+import java.util.NoSuchElementException;
 import java.util.Set;
 import java.util.zip.GZIPInputStream;
-import java.util.NoSuchElementException;
 
 /**
  * An instance of the <a href="https://www.lemurproject.org/clueweb12.php/">ClueWeb12 collection</a>.
  * This can be used to read the complete ClueWeb12 collection or the smaller ClueWeb12-B13 subset.
  */
 public class ClueWeb12Collection extends DocumentCollection<ClueWeb12Collection.Document> {
-  private static final Logger LOG = LogManager.getLogger(ClueWeb12Collection.class);
 
-  public ClueWeb12Collection(){
-    this.allowedFileSuffix = new HashSet<>(Arrays.asList(".warc.gz"));
-    this.skippedDir = new HashSet<>(Arrays.asList("OtherData"));
+  public ClueWeb12Collection(Path path) {
+    this.path = path;
+    this.allowedFileSuffix = Set.of(".warc.gz");
+    this.skippedDir = Set.of("OtherData");
   }
 
   @Override
   public FileSegment<ClueWeb12Collection.Document> createFileSegment(Path p) throws IOException {
     return new Segment(p);
-  }
-
-  public FileSegment<ClueWeb12Collection.Document> createFileSegment(String raw) {
-    return new Segment(raw);
   }
 
   /**
@@ -101,15 +90,9 @@ public class ClueWeb12Collection extends DocumentCollection<ClueWeb12Collection.
   public static class Segment extends FileSegment<ClueWeb12Collection.Document> {
     protected DataInputStream stream;
 
-    protected Segment(Path path) throws IOException {
+    public Segment(Path path) throws IOException {
       super(path);
-      this.stream = new DataInputStream(
-              new GZIPInputStream(Files.newInputStream(path, StandardOpenOption.READ)));
-    }
-
-    protected Segment(String raw) {
-      super(null);
-      this.stream = new DataInputStream(new StringInputStream(raw));
+      this.stream = new DataInputStream(new GZIPInputStream(Files.newInputStream(path, StandardOpenOption.READ)));
     }
 
     @Override
@@ -118,11 +101,15 @@ public class ClueWeb12Collection extends DocumentCollection<ClueWeb12Collection.
     }
 
     @Override
-    public void close() throws IOException {
-      if (stream != null) {
-        stream.close();
+    public void close() {
+      try {
+        if (stream != null) {
+          stream.close();
+        }
+        super.close();
+      } catch (IOException e) {
+        // There's really nothing to be done, so just silently eat the exception.
       }
-      super.close();
     }
 
     /**
